--- a/canpi-web-app-ssr/static/static-web-page.html
+++ b/canpi-web-app-ssr/static/static-web-page.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src="/static/merg_logo.png"/>
-<img src="/static/rpi.jpg"/>
+<img src="/static/merg_logo.png" alt="MERG Logo"/>
+<img src="/static/rpi.jpg" alt="Raspberry Pi Logo"/>
 <header><h3>CANPiWi Configuration</h3></header>
 <header><h4>Version 1.7a</h4></header>
 </body>
