Switch to grid layout

--- a/canpi-web-app-ssr/static/static-web-page.html
+++ b/canpi-web-app-ssr/static/static-web-page.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>MERG</title>
-    <link rel="stylesheet" type="text/css" href="/static/main.css">
-    <link rel="stylesheet" href="/static/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../static/main.css">
+    <link rel="stylesheet" type="text/css" href="../static/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src="/static/merg_logo.png" alt="MERG Logo"/>
-<img src="/static/rpi.jpg" alt="Raspberry Pi Logo"/>
+<img src="../static/merg_logo.png" alt="MERG Logo"/>
+<img src="../static/rpi.jpg" alt="Raspberry Pi Logo"/>
 <header><h3>CANPiWi Configuration</h3></header>
 <header><h4>Version 1.7a</h4></header>
 </body>
